test/libsolidity/syntaxTests/nameAndTypeResolution/207_no_mappings_in_memory_array.sol
contract C {
    function f() public {
        mapping(uint=>uint)[] memory x;
    }
}
// ----
// TypeError: (47-77): Data location must be "storage" for variable, but "memory" was given.
